tests/mytests/error/call_error.vsl
PROTO VOID fact(n)

FUNC VOID main() {
    fact(10, 12);
}

FUNC VOID fact(n) {
    INT test
    test := n
}
